--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <h1>About Me</h1>
       <img src="brunoascencio96.github.io/IMG_2219.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
       <div class="w3-left-align w3-padding-large">
-        <p>Lorem ipusms sed vitae justo condimenstum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-        <p>Lorem ipusm sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <p>Adaptable, self-motivated, and entrepreneurial minded business student who is recognized for positive attitude, integrity and ability to solve problems. Capable of working well under pressure through good time management and reasoning skills. Bilingual proficiency in English and Spanish.	</p>
+        // <p>Lorem ipusm sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
       </div>
     </div>
   </div>
