--- a/index.html
+++ b/index.html
@@ -40,30 +40,29 @@
     </div>
     <div class="w3-row">
       <div class="w3-half">
-        <img src="/w3images/coffee.jpg" style="width:100%">
+        <img src="brunoascencio96.github.io/IMG_2061.jpeg" style="width:100%">
       </div>
       <div class="w3-half">
-        <img src="/w3images/workbench.jpg" style="width:100%">
-      </div>
+		<img src="brunoascencio96.github.io/coffee.jpg" style="width:100%">      </div>
     </div>
     <div class="w3-row w3-hide-small">
       <div class="w3-half">
-        <img src="/w3images/workbench.jpg" style="width:100%">
+        <img src="brunoascencio96.github.io/coffee.jpg" style="width:100%">
       </div>
       <div class="w3-half">
-        <img src="/w3images/coffee.jpg" style="width:100%">
+        <img src="brunoascencio96.github.io/coffee.jpg" style="width:100%">
       </div>
     </div>
 
     <div class="w3-row w3-hide-small">
       <div class="w3-half">
-        <img src="/w3images/sound.jpg" style="width:100%">
+        <img src="brunoascencio96.github.io/coffee.jpg" style="width:100%">
       </div>
       <div class="w3-half">
-        <img src="/w3images/workbench.jpg" style="width:100%">
+        <img src="brunoascencio96.github.io/coffee.jpg" style="width:100%">
       </div>
     </div><br>
-    <p>Just call me awesome.</p>
+    
   </div>
   <div class="w3-half w3-indigo w3-container" style="min-height:800px">
     <div class="w3-padding-64 w3-center">
