--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <!-- First Grid: Logo & About -->
 <div class="w3-row">
-  <div class="w3-half w3-black w3-container w3-center" style="height:700px">
+  <div class="w3-half w3-black w3-container w3-center" style="height:750px">
     <div class="w3-padding-64">
       <h1>My Name is Bruno</h1>
     </div>
@@ -19,7 +19,7 @@
       <a href="#contact" class="w3-button w3-black w3-block w3-hover-brown w3-padding-16">Contact</a>
     </div>
   </div>
-  <div class="w3-half w3-red w3-container" style="height:900px">
+  <div class="w3-half w3-red w3-container" style="height:750px">
     <div class="w3-padding-64 w3-center">
       <h1>About Me</h1>
       <img src="brunoascencio96.github.io/IMG_2219.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
@@ -35,8 +35,8 @@
 <div class="w3-row">
   <div class="w3-half w3-light-grey w3-center" style="min-height:800px" id="work">
     <div class="w3-padding-64">
-      <h2>My Work</h2>
-      <p>Some of my latest projects.</p>
+      <h2>My Involvement</h2>
+      <p>Student Organizations</p>
     </div>
     <div class="w3-row">
       <div class="w3-half">
