--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
     </div>
     <div class="w3-row w3-hide-small">
       <div class="w3-half">
-        <img src="brunoascencio96.github.io/coffee.jpg" style="width:100%">
+        <img src="brunoascencio96.github.io/MISSO.png" style="width:100%">
       </div>
       <div class="w3-half">
-        <img src="brunoascencio96.github.io/coffee.jpg" style="width:100%">
+        <img src="brunoascencio96.github.io/bouncy.png" style="width:100%">
       </div>
     </div>
 
