--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="w3-padding-64">
       <a href="#" class="w3-button w3-black w3-block w3-hover-blue-grey w3-padding-16">Resume</a>
-      <a href="#work" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">My Work</a>
+      <a href="#work" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">My Involvement</a>
       <a href="#work" class="w3-button w3-black w3-block w3-hover-dark-grey w3-padding-16">Involvement</a>
       <a href="#contact" class="w3-button w3-black w3-block w3-hover-brown w3-padding-16">Contact</a>
     </div>
@@ -54,14 +54,14 @@
       </div>
     </div>
 
-    <div class="w3-row w3-hide-small">
-      <div class="w3-half">
-        <img src="brunoascencio96.github.io/coffee.jpg" style="width:100%">
-      </div>
-      <div class="w3-half">
-        <img src="brunoascencio96.github.io/coffee.jpg" style="width:100%">
-      </div>
-    </div><br>
+   // <div class="w3-row w3-hide-small">
+     // <div class="w3-half">
+       // <img src="brunoascencio96.github.io/coffee.jpg" style="width:100%">
+      //</div>
+      //<div class="w3-half">
+        //<img src="brunoascencio96.github.io/coffee.jpg" style="width:100%">
+      //</div>
+    //</div><br>
     
   </div>
   <div class="w3-half w3-indigo w3-container" style="min-height:800px">
