--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
       </div>
     </div>
 
-   // <div class="w3-row w3-hide-small">
+  <!-- // <div class="w3-row w3-hide-small">
      // <div class="w3-half">
        // <img src="brunoascencio96.github.io/coffee.jpg" style="width:100%">
       //</div>
       //<div class="w3-half">
         //<img src="brunoascencio96.github.io/coffee.jpg" style="width:100%">
       //</div>
-    //</div><br>
+    //</div><br> -->
     
   </div>
   <div class="w3-half w3-indigo w3-container" style="min-height:800px">
