--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
       <h2>Resume</h2>
       <p>A draft from my CV</p>
       <div class="w3-container w3-responsive">
-        <img src="Ascencio_Bruno_Resume_PDF" style="width:100%",>
+		  <div>
+        <img src="Ascencio_Bruno_Resume_PDF.pdf" style="width:100%",>
       </div>
     </div>
   </div>
