--- a/index.html
+++ b/index.html
@@ -69,8 +69,34 @@
       <h2>Resume</h2>
       <p>A draft from my CV</p>
       <div class="w3-container w3-responsive">
-		  <div>
-        <img src="Ascencio_Bruno_Resume_PDF.pdf" style="width:100%",>
+        <table class="w3-table">
+          <tr>
+            <th>Year</th>
+            <th>Title</th>
+            <th>Where</th>
+          </tr>
+          <tr class="w3-white">
+            <td>2017-Present</td>
+            <td>Product Zone Specialist</td>
+            <td>Apple Inc.</td>
+          </tr>
+          <tr>
+            <td>2015-2017</td>
+            <td>Sales Associate</td>
+            <td>Michael Kors</td>
+          </tr>
+          <tr class="w3-white">
+            <td>2013-2015</td>
+            <td>Kitchen Leader</td>
+            <td>Santikos Entertainment</td>
+          </tr>
+          
+          <tr class="w3-hide-medium">
+            <td>2002-2005</td>
+            <td>Degree in Bachelor of Business</td>
+            <td>RMIT University, Melbourne, Australiaa</td>
+          </tr>
+        </table>
       </div>
     </div>
   </div>
