--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="w3-row">
   <div class="w3-half w3-black w3-container w3-center" style="height:750px">
     <div class="w3-padding-64">
-      <h1>My Name is Bruno</h1>
+      <h1>Bruno Ascencio</h1>
     </div>
     <div class="w3-padding-64">
       <a href="#" class="w3-button w3-black w3-block w3-hover-blue-grey w3-padding-16">Resume</a>
@@ -43,14 +43,15 @@
         <img src="brunoascencio96.github.io/IMG_2061.jpeg" style="width:100%">
       </div>
       <div class="w3-half">
-		<img src="brunoascencio96.github.io/group-photo.jpg" style="width:100%">      </div>
+		<img src="brunoascencio96.github.io/bouncy.png" style="width:100%">
+		    </div>
     </div>
     <div class="w3-row w3-hide-small">
       <div class="w3-half">
         <img src="brunoascencio96.github.io/MISSO.png" style="width:100%">
       </div>
       <div class="w3-half">
-        <img src="brunoascencio96.github.io/bouncy.png" style="width:100%">
+		  <img src="brunoascencio96.github.io/group-photo.jpg" style="width:100%">  
       </div>
     </div>
 
@@ -91,11 +92,7 @@
             <td>Santikos Entertainment</td>
           </tr>
           
-          <tr class="w3-hide-medium">
-            <td>2002-2005</td>
-            <td>Degree in Bachelor of Business</td>
-            <td>RMIT University, Melbourne, Australiaa</td>
-          </tr>
+        
         </table>
       </div>
     </div>
