--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <img src="brunoascencio96.github.io/IMG_2061.jpeg" style="width:100%">
       </div>
       <div class="w3-half">
-		<img src="brunoascencio96.github.io/bouncy.png" style="width:100%">
+		<img src="brunoascencio96.github.io/bouncy.png" style="width:2208px, height:3116px">
 		    </div>
     </div>
     <div class="w3-row w3-hide-small">
